Redact/mole.output
Grammar

    0 $accept: Program $end

    1 Program: Def END

    2 Def: Function Def
    3    | %empty

    4 Function: FN ID OP FormalList CP TYPE OC Body CC

    5 FormalList: NEFormal
    6           | %empty

    7 NEFormal: Formal NEFormal-Tail

    8 NEFormal-Tail: CM NEFormal
    9              | %empty

   10 Formal: TYPE ID

   11 Body: NEBody
   12     | %empty

   13 NEBody: Statement SC Body

   14 Statement: Declaration
   15          | Print
   16          | If
   17          | Expr
   18          | Return

   19 Declaration: TYPE ID EQ Expr

   20 Print: PRINT OP Expr CP

   21 If: IF Expr OC Body CC ELSE OC Body CC

   22 Return: RETURN Expr

   23 Expr: Simple-Expr Expr-Tail

   24 Simple-Expr: Term Simple-Tail

   25 Expr-Tail: LT Expr
   26          | EE Expr
   27          | Simple-Expr

   28 Term: Factor Term-Tail

   29 Simple-Tail: OR Simple-Expr
   30            | PL Simple-Expr
   31            | MN Simple-Expr
   32            | Term

   33 Term-Tail: AND Term
   34          | TM Term
   35          | DV Term
   36          | Factor

   37 Factor: NG Factor
   38       | ID Factor-Tail
   39       | Literal
   40       | MN Factor
   41       | OP Expr CP

   42 Factor-Tail: OP Actuals CP
   43            | OB Assign CB EQ Expr
   44            | EQ Expr

   45 Assign: Expr Assign-Tail

   46 Assign-Tail: SC Expr
   47            | %empty

   48 Actuals: NEActuals
   49        | %empty

   50 NEActuals: Expr NEA-Tail

   51 NEA-Tail: CM NEActuals
   52         | %empty

   53 Literal: INT
   54        | BL
   55        | VM

   56 VM: OB List CB

   57 List: INT List
   58     | SC List
   59     | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
RETURN (258) 22
FN (259) 4
IF (260) 21
ELSE (261) 21
TYPE (262) 4 10 19
PRINT (263) 20
EQ (264) 19 43 44
LT (265) 25
EE (266) 26
PL (267) 30
MN (268) 31 40
TM (269) 34
DV (270) 35
SC (271) 13 46 58
CM (272) 8 51
OC (273) 4 21
CC (274) 4 21
OP (275) 4 20 41 42
CP (276) 4 20 41 42
OB (277) 43 56
CB (278) 43 56
NG (279) 37
AND (280) 33
OR (281) 29
END (282) 1
INT (283) 53 57
ID (284) 4 10 19 38
BL (285) 54


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
Def (33)
    on left: 2 3, on right: 1 2
Function (34)
    on left: 4, on right: 2
FormalList (35)
    on left: 5 6, on right: 4
NEFormal (36)
    on left: 7, on right: 5 8
NEFormal-Tail (37)
    on left: 8 9, on right: 7
Formal (38)
    on left: 10, on right: 7
Body (39)
    on left: 11 12, on right: 4 13 21
NEBody (40)
    on left: 13, on right: 11
Statement (41)
    on left: 14 15 16 17 18, on right: 13
Declaration (42)
    on left: 19, on right: 14
Print (43)
    on left: 20, on right: 15
If (44)
    on left: 21, on right: 16
Return (45)
    on left: 22, on right: 18
Expr (46)
    on left: 23, on right: 17 19 20 21 22 25 26 41 43 44 45 46 50
Simple-Expr (47)
    on left: 24, on right: 23 27 29 30 31
Expr-Tail (48)
    on left: 25 26 27, on right: 23
Term (49)
    on left: 28, on right: 24 32 33 34 35
Simple-Tail (50)
    on left: 29 30 31 32, on right: 24
Term-Tail (51)
    on left: 33 34 35 36, on right: 28
Factor (52)
    on left: 37 38 39 40 41, on right: 28 36 37 40
Factor-Tail (53)
    on left: 42 43 44, on right: 38
Assign (54)
    on left: 45, on right: 43
Assign-Tail (55)
    on left: 46 47, on right: 45
Actuals (56)
    on left: 48 49, on right: 42
NEActuals (57)
    on left: 50, on right: 48 51
NEA-Tail (58)
    on left: 51 52, on right: 50
Literal (59)
    on left: 53 54 55, on right: 39
VM (60)
    on left: 56, on right: 55
List (61)
    on left: 57 58 59, on right: 56 57 58


State 0

    0 $accept: . Program $end

    FN  shift, and go to state 1

    $default  reduce using rule 3 (Def)

    Program   go to state 2
    Def       go to state 3
    Function  go to state 4


State 1

    4 Function: FN . ID OP FormalList CP TYPE OC Body CC

    ID  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: Def . END

    END  shift, and go to state 7


State 4

    2 Def: Function . Def

    FN  shift, and go to state 1

    $default  reduce using rule 3 (Def)

    Def       go to state 8
    Function  go to state 4


State 5

    4 Function: FN ID . OP FormalList CP TYPE OC Body CC

    OP  shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    1 Program: Def END .

    $default  reduce using rule 1 (Program)


State 8

    2 Def: Function Def .

    $default  reduce using rule 2 (Def)


State 9

    4 Function: FN ID OP . FormalList CP TYPE OC Body CC

    TYPE  shift, and go to state 10

    $default  reduce using rule 6 (FormalList)

    FormalList  go to state 11
    NEFormal    go to state 12
    Formal      go to state 13


State 10

   10 Formal: TYPE . ID

    ID  shift, and go to state 14


State 11

    4 Function: FN ID OP FormalList . CP TYPE OC Body CC

    CP  shift, and go to state 15


State 12

    5 FormalList: NEFormal .

    $default  reduce using rule 5 (FormalList)


State 13

    7 NEFormal: Formal . NEFormal-Tail

    CM  shift, and go to state 16

    $default  reduce using rule 9 (NEFormal-Tail)

    NEFormal-Tail  go to state 17


State 14

   10 Formal: TYPE ID .

    $default  reduce using rule 10 (Formal)


State 15

    4 Function: FN ID OP FormalList CP . TYPE OC Body CC

    TYPE  shift, and go to state 18


State 16

    8 NEFormal-Tail: CM . NEFormal

    TYPE  shift, and go to state 10

    NEFormal  go to state 19
    Formal    go to state 13


State 17

    7 NEFormal: Formal NEFormal-Tail .

    $default  reduce using rule 7 (NEFormal)


State 18

    4 Function: FN ID OP FormalList CP TYPE . OC Body CC

    OC  shift, and go to state 20


State 19

    8 NEFormal-Tail: CM NEFormal .

    $default  reduce using rule 8 (NEFormal-Tail)


State 20

    4 Function: FN ID OP FormalList CP TYPE OC . Body CC

    RETURN  shift, and go to state 21
    IF      shift, and go to state 22
    TYPE    shift, and go to state 23
    PRINT   shift, and go to state 24
    MN      shift, and go to state 25
    OP      shift, and go to state 26
    OB      shift, and go to state 27
    NG      shift, and go to state 28
    INT     shift, and go to state 29
    ID      shift, and go to state 30
    BL      shift, and go to state 31

    $default  reduce using rule 12 (Body)

    Body         go to state 32
    NEBody       go to state 33
    Statement    go to state 34
    Declaration  go to state 35
    Print        go to state 36
    If           go to state 37
    Return       go to state 38
    Expr         go to state 39
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 21

   22 Return: RETURN . Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 45
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 22

   21 If: IF . Expr OC Body CC ELSE OC Body CC

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 46
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 23

   19 Declaration: TYPE . ID EQ Expr

    ID  shift, and go to state 47


State 24

   20 Print: PRINT . OP Expr CP

    OP  shift, and go to state 48


State 25

   40 Factor: MN . Factor

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Factor   go to state 49
    Literal  go to state 43
    VM       go to state 44


State 26

   41 Factor: OP . Expr CP

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 50
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 27

   56 VM: OB . List CB

    SC   shift, and go to state 51
    INT  shift, and go to state 52

    $default  reduce using rule 59 (List)

    List  go to state 53


State 28

   37 Factor: NG . Factor

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Factor   go to state 54
    Literal  go to state 43
    VM       go to state 44


State 29

   53 Literal: INT .

    $default  reduce using rule 53 (Literal)


State 30

   38 Factor: ID . Factor-Tail

    EQ  shift, and go to state 55
    OP  shift, and go to state 56
    OB  shift, and go to state 57

    Factor-Tail  go to state 58


State 31

   54 Literal: BL .

    $default  reduce using rule 54 (Literal)


State 32

    4 Function: FN ID OP FormalList CP TYPE OC Body . CC

    CC  shift, and go to state 59


State 33

   11 Body: NEBody .

    $default  reduce using rule 11 (Body)


State 34

   13 NEBody: Statement . SC Body

    SC  shift, and go to state 60


State 35

   14 Statement: Declaration .

    $default  reduce using rule 14 (Statement)


State 36

   15 Statement: Print .

    $default  reduce using rule 15 (Statement)


State 37

   16 Statement: If .

    $default  reduce using rule 16 (Statement)


State 38

   18 Statement: Return .

    $default  reduce using rule 18 (Statement)


State 39

   17 Statement: Expr .

    $default  reduce using rule 17 (Statement)


State 40

   23 Expr: Simple-Expr . Expr-Tail

    LT   shift, and go to state 61
    EE   shift, and go to state 62
    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Simple-Expr  go to state 63
    Expr-Tail    go to state 64
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 41

   24 Simple-Expr: Term . Simple-Tail

    PL   shift, and go to state 65
    MN   shift, and go to state 66
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    OR   shift, and go to state 67
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Term         go to state 68
    Simple-Tail  go to state 69
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 42

   28 Term: Factor . Term-Tail

    MN   shift, and go to state 25
    TM   shift, and go to state 70
    DV   shift, and go to state 71
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    AND  shift, and go to state 72
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Term-Tail  go to state 73
    Factor     go to state 74
    Literal    go to state 43
    VM         go to state 44


State 43

   39 Factor: Literal .

    $default  reduce using rule 39 (Factor)


State 44

   55 Literal: VM .

    $default  reduce using rule 55 (Literal)


State 45

   22 Return: RETURN Expr .

    $default  reduce using rule 22 (Return)


State 46

   21 If: IF Expr . OC Body CC ELSE OC Body CC

    OC  shift, and go to state 75


State 47

   19 Declaration: TYPE ID . EQ Expr

    EQ  shift, and go to state 76


State 48

   20 Print: PRINT OP . Expr CP

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 77
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 49

   40 Factor: MN Factor .

    $default  reduce using rule 40 (Factor)


State 50

   41 Factor: OP Expr . CP

    CP  shift, and go to state 78


State 51

   58 List: SC . List

    SC   shift, and go to state 51
    INT  shift, and go to state 52

    $default  reduce using rule 59 (List)

    List  go to state 79


State 52

   57 List: INT . List

    SC   shift, and go to state 51
    INT  shift, and go to state 52

    $default  reduce using rule 59 (List)

    List  go to state 80


State 53

   56 VM: OB List . CB

    CB  shift, and go to state 81


State 54

   37 Factor: NG Factor .

    $default  reduce using rule 37 (Factor)


State 55

   44 Factor-Tail: EQ . Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 82
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 56

   42 Factor-Tail: OP . Actuals CP

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    $default  reduce using rule 49 (Actuals)

    Expr         go to state 83
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Actuals      go to state 84
    NEActuals    go to state 85
    Literal      go to state 43
    VM           go to state 44


State 57

   43 Factor-Tail: OB . Assign CB EQ Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 86
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Assign       go to state 87
    Literal      go to state 43
    VM           go to state 44


State 58

   38 Factor: ID Factor-Tail .

    $default  reduce using rule 38 (Factor)


State 59

    4 Function: FN ID OP FormalList CP TYPE OC Body CC .

    $default  reduce using rule 4 (Function)


State 60

   13 NEBody: Statement SC . Body

    RETURN  shift, and go to state 21
    IF      shift, and go to state 22
    TYPE    shift, and go to state 23
    PRINT   shift, and go to state 24
    MN      shift, and go to state 25
    OP      shift, and go to state 26
    OB      shift, and go to state 27
    NG      shift, and go to state 28
    INT     shift, and go to state 29
    ID      shift, and go to state 30
    BL      shift, and go to state 31

    $default  reduce using rule 12 (Body)

    Body         go to state 88
    NEBody       go to state 33
    Statement    go to state 34
    Declaration  go to state 35
    Print        go to state 36
    If           go to state 37
    Return       go to state 38
    Expr         go to state 39
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 61

   25 Expr-Tail: LT . Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 89
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 62

   26 Expr-Tail: EE . Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 90
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 63

   27 Expr-Tail: Simple-Expr .

    $default  reduce using rule 27 (Expr-Tail)


State 64

   23 Expr: Simple-Expr Expr-Tail .

    $default  reduce using rule 23 (Expr)


State 65

   30 Simple-Tail: PL . Simple-Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Simple-Expr  go to state 91
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 66

   31 Simple-Tail: MN . Simple-Expr
   40 Factor: MN . Factor

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Simple-Expr  go to state 92
    Term         go to state 41
    Factor       go to state 93
    Literal      go to state 43
    VM           go to state 44


State 67

   29 Simple-Tail: OR . Simple-Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Simple-Expr  go to state 94
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 68

   32 Simple-Tail: Term .

    $default  reduce using rule 32 (Simple-Tail)


State 69

   24 Simple-Expr: Term Simple-Tail .

    $default  reduce using rule 24 (Simple-Expr)


State 70

   34 Term-Tail: TM . Term

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Term     go to state 95
    Factor   go to state 42
    Literal  go to state 43
    VM       go to state 44


State 71

   35 Term-Tail: DV . Term

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Term     go to state 96
    Factor   go to state 42
    Literal  go to state 43
    VM       go to state 44


State 72

   33 Term-Tail: AND . Term

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Term     go to state 97
    Factor   go to state 42
    Literal  go to state 43
    VM       go to state 44


State 73

   28 Term: Factor Term-Tail .

    $default  reduce using rule 28 (Term)


State 74

   36 Term-Tail: Factor .

    $default  reduce using rule 36 (Term-Tail)


State 75

   21 If: IF Expr OC . Body CC ELSE OC Body CC

    RETURN  shift, and go to state 21
    IF      shift, and go to state 22
    TYPE    shift, and go to state 23
    PRINT   shift, and go to state 24
    MN      shift, and go to state 25
    OP      shift, and go to state 26
    OB      shift, and go to state 27
    NG      shift, and go to state 28
    INT     shift, and go to state 29
    ID      shift, and go to state 30
    BL      shift, and go to state 31

    $default  reduce using rule 12 (Body)

    Body         go to state 98
    NEBody       go to state 33
    Statement    go to state 34
    Declaration  go to state 35
    Print        go to state 36
    If           go to state 37
    Return       go to state 38
    Expr         go to state 39
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 76

   19 Declaration: TYPE ID EQ . Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 99
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 77

   20 Print: PRINT OP Expr . CP

    CP  shift, and go to state 100


State 78

   41 Factor: OP Expr CP .

    $default  reduce using rule 41 (Factor)


State 79

   58 List: SC List .

    $default  reduce using rule 58 (List)


State 80

   57 List: INT List .

    $default  reduce using rule 57 (List)


State 81

   56 VM: OB List CB .

    $default  reduce using rule 56 (VM)


State 82

   44 Factor-Tail: EQ Expr .

    $default  reduce using rule 44 (Factor-Tail)


State 83

   50 NEActuals: Expr . NEA-Tail

    CM  shift, and go to state 101

    $default  reduce using rule 52 (NEA-Tail)

    NEA-Tail  go to state 102


State 84

   42 Factor-Tail: OP Actuals . CP

    CP  shift, and go to state 103


State 85

   48 Actuals: NEActuals .

    $default  reduce using rule 48 (Actuals)


State 86

   45 Assign: Expr . Assign-Tail

    SC  shift, and go to state 104

    $default  reduce using rule 47 (Assign-Tail)

    Assign-Tail  go to state 105


State 87

   43 Factor-Tail: OB Assign . CB EQ Expr

    CB  shift, and go to state 106


State 88

   13 NEBody: Statement SC Body .

    $default  reduce using rule 13 (NEBody)


State 89

   25 Expr-Tail: LT Expr .

    $default  reduce using rule 25 (Expr-Tail)


State 90

   26 Expr-Tail: EE Expr .

    $default  reduce using rule 26 (Expr-Tail)


State 91

   30 Simple-Tail: PL Simple-Expr .

    $default  reduce using rule 30 (Simple-Tail)


State 92

   31 Simple-Tail: MN Simple-Expr .

    $default  reduce using rule 31 (Simple-Tail)


State 93

   28 Term: Factor . Term-Tail
   40 Factor: MN Factor .

    $default  reduce using rule 40 (Factor)

    Term-Tail  go to state 73
    Factor     go to state 74
    Literal    go to state 43
    VM         go to state 44


State 94

   29 Simple-Tail: OR Simple-Expr .

    $default  reduce using rule 29 (Simple-Tail)


State 95

   34 Term-Tail: TM Term .

    $default  reduce using rule 34 (Term-Tail)


State 96

   35 Term-Tail: DV Term .

    $default  reduce using rule 35 (Term-Tail)


State 97

   33 Term-Tail: AND Term .

    $default  reduce using rule 33 (Term-Tail)


State 98

   21 If: IF Expr OC Body . CC ELSE OC Body CC

    CC  shift, and go to state 107


State 99

   19 Declaration: TYPE ID EQ Expr .

    $default  reduce using rule 19 (Declaration)


State 100

   20 Print: PRINT OP Expr CP .

    $default  reduce using rule 20 (Print)


State 101

   51 NEA-Tail: CM . NEActuals

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 83
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    NEActuals    go to state 108
    Literal      go to state 43
    VM           go to state 44


State 102

   50 NEActuals: Expr NEA-Tail .

    $default  reduce using rule 50 (NEActuals)


State 103

   42 Factor-Tail: OP Actuals CP .

    $default  reduce using rule 42 (Factor-Tail)


State 104

   46 Assign-Tail: SC . Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 109
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 105

   45 Assign: Expr Assign-Tail .

    $default  reduce using rule 45 (Assign)


State 106

   43 Factor-Tail: OB Assign CB . EQ Expr

    EQ  shift, and go to state 110


State 107

   21 If: IF Expr OC Body CC . ELSE OC Body CC

    ELSE  shift, and go to state 111


State 108

   51 NEA-Tail: CM NEActuals .

    $default  reduce using rule 51 (NEA-Tail)


State 109

   46 Assign-Tail: SC Expr .

    $default  reduce using rule 46 (Assign-Tail)


State 110

   43 Factor-Tail: OB Assign CB EQ . Expr

    MN   shift, and go to state 25
    OP   shift, and go to state 26
    OB   shift, and go to state 27
    NG   shift, and go to state 28
    INT  shift, and go to state 29
    ID   shift, and go to state 30
    BL   shift, and go to state 31

    Expr         go to state 112
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 111

   21 If: IF Expr OC Body CC ELSE . OC Body CC

    OC  shift, and go to state 113


State 112

   43 Factor-Tail: OB Assign CB EQ Expr .

    $default  reduce using rule 43 (Factor-Tail)


State 113

   21 If: IF Expr OC Body CC ELSE OC . Body CC

    RETURN  shift, and go to state 21
    IF      shift, and go to state 22
    TYPE    shift, and go to state 23
    PRINT   shift, and go to state 24
    MN      shift, and go to state 25
    OP      shift, and go to state 26
    OB      shift, and go to state 27
    NG      shift, and go to state 28
    INT     shift, and go to state 29
    ID      shift, and go to state 30
    BL      shift, and go to state 31

    $default  reduce using rule 12 (Body)

    Body         go to state 114
    NEBody       go to state 33
    Statement    go to state 34
    Declaration  go to state 35
    Print        go to state 36
    If           go to state 37
    Return       go to state 38
    Expr         go to state 39
    Simple-Expr  go to state 40
    Term         go to state 41
    Factor       go to state 42
    Literal      go to state 43
    VM           go to state 44


State 114

   21 If: IF Expr OC Body CC ELSE OC Body . CC

    CC  shift, and go to state 115


State 115

   21 If: IF Expr OC Body CC ELSE OC Body CC .

    $default  reduce using rule 21 (If)
